# makemore-fun

./: .gitattributes  .gitignore  README.md  build_makemore_backprop_ninja.ipynb  index.html  lecture-3.ipynb  lecture-4.ipynb  makemore.rs  requirements.txt  scratch.ipynb  test.sh
assets/: index-BJsSxHfb.js  index-CtKS_ICN.js  index-DJidUYwm.js  index-Deg0rbKQ.js  index-Dp4yu1U-.js  index-GfReacOy.js  index-gjS9oUAN.js  index-jKI4FNtc.js  web_bg-D4eSb4ES.wasm  web_bg-DA4tiYt0.wasm  web_bg-Db551_ki.wasm  worker-BC9fQrk8.js  worker-C8S_dHbT.js  worker-DtCCAsDc.js
gpt/: .gitignore  Cargo.toml  README.md
gpt/cli/: Cargo.toml
gpt/cli/src/: args.rs  device.rs  main.rs
gpt/gpt-core/: Cargo.toml
gpt/gpt-core/examples/bytepair/: main.rs
gpt/gpt-core/src/: bigram_language_model.rs  char_tokenizer.rs  language_model.rs  language_model_builder.rs  lib.rs  pair_tokenizers.rs  safetensors_loader.rs  tokenizer.rs  transformer_language_model.rs  util.rs
gpt/src/: args.rs  bigram_language_model.rs  language_model.rs  main.rs  tokenizer.rs  transformer_language_model.rs  util.rs
gpt/web/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json
gpt/web/public/weights/: bigram.safetensors  garbage.safetensors  massive-char-pair-alpha.safetensors  massive.safetensors
gpt/web/src/: lib.rs
gpt/web/ts/: index.ts  index.tsx  number-slider.tsx  worker-types.ts  worker.ts
gpt/web/weights/: default-tiny-shakespeare.safetensors
lecture3/: constants.py  model.py
python/: lecture-2.ipynb  lecture-4.ipynb
python/lecture3/: model.py  names.py  training_data.py
weights/: bigram.safetensors  default-tiny-shakespeare.safetensors  garbage.safetensors
