[package]
name = "gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version="1.0.98", features=["backtrace"]}
approx = "0.5.1"
candle-core = {version="0.9.1", features=["cuda"]}
candle-nn = {version="0.9.1", features=["cuda"]}
candle-optimisers = {version="0.9.0", features=["cuda"]}
clap = {version="4.5.39", features=["derive"]}
indicatif = "0.17.11"
rand = "0.9.1"
