[workspace]
members = [
    "cli",
    "gpt-core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = {version="1.0.98", features=["backtrace"]}
approx = "0.5.1"
candle-core = "0.9.1"
candle-nn = "0.9.1"
gpt-core = { path = "./gpt-core" }
rand = "0.9.1"
