[package]
name = "gpt-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = {workspace = true}
approx = {workspace = true}
candle-core = {workspace = true}
candle-nn = {workspace = true}
rand = {workspace = true}
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
