[package]
name = "web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
gpt-core = {workspace = true}
anyhow = {workspace = true}
candle-core = {workspace = true}
candle-nn = {workspace = true}
rand = {workspace = true}
getrandom = { workspace=true, features = ["wasm_js"] }
